# libandroid-extra

./: .gitignore  0001-fix-ndk-sysroot-for-GNUC-compat.patch  CMakeLists.txt  Makefile  README.md  bionic_futex.cpp  grp.c  posix_spawn.cpp  pthread_barrier.cpp  pthread_spinlock.cpp  pty.c  stdio.cpp
.github/workflows/: build.yml
crypt/: CMakeLists.txt  crypt.c  crypt_des.h  crypt_r.c
crypt/include/: crypt.h
crypt/src/: crypt_i.h
execinfo/: Makefile  execinfo.c
libc-extra/: CMakeLists.txt
libc-extra/src/: async_safe_log.cpp  bionic_futex.c  bionic_futex.h  conio.cpp  execinfo.cpp  getcomtext.S  glob.c  hcreate.c  hcreate_r.c  hdestroy_r.c  hsearch_r.c  ifaddrs.c  langinfo.c  lockf.c  makecontext.c  mblen.c  mem_create.c  memfd_create.c  nl_types.c  pthread_affinity.c  pthread_barrier.c  pthread_spinlock.c  pty.c  semaphore.c  setcontext.S  startcontext.S  stdio.cpp  stdio_ext.c  stdio_extra.h  stdio_fmemopen.c  stdio_open_memstream.c  string.c  swapcontext.S  wctype.c  whar.c
libc-extra/src/arm64-v8a/: makecontext.c
libc-extra/src/armeabi-v7a/: getcontext.S  makecontext.c  setcontext.S  startcontext.S  swapcontext.S
libc-extra/src/x86/: makecontext.c  startcontext.S
libc-extra/src/x86_64/: makecontext.c
libiconv/: CMakeLists.txt
libiconv/include/: iconv.h  iconv.h.build.in
libiconv/lib/: config.h  localcharset.h
libm-extra/: CMakeLists.txt
libm-extra/src/: cabs.c  cabsf.c  cabsl.c  cacos.c  cacosf.c  cacosh.c  cacoshf.c  cacoshl.c  cacosl.c  carg.c  cargf.c  cargl.c  casin.c  casinf.c  casinh.c  casinhf.c  casinhl.c  casinl.c  catan.c  catanf.c  catanh.c  catanhf.c  catanhl.c  catanl.c  ccos.c  ccosf.c  ccosh.c  ccoshf.c  ccoshl.c  ccosl.c  cephes_subr.c  cephes_subr.h  cephes_subrf.c  cephes_subrf.h  cephes_subrl.c  cephes_subrl.h  cexp.c  cexpf.c  cexpl.c  cimag.c  (+33 more)
sysroot/usr/include/: .editorconfig  complex.h  conio.h  ctype.h  execinfo.h  fcntl.h  glob.h  grp.h  iconv.h  ifaddrs.h  langinfo.h  malloc.h  math.h  nl_types.h  pthread.h  pty.h  search.h  spawn.h  stdc-predef.h  stdio.h  stdio_ext.h  stdlib.h  string.h  strings.h  time.h  uconfig_local.h  ucontext.h  unistd.h  utmp.h  wchar.h  wctype.h  zlib.h
sysroot/usr/include/CL/: cl_version.h
sysroot/usr/include/SLES/: OpenSLES_Platform.h
sysroot/usr/include/aaudio/: AAudio.h
sysroot/usr/include/android/: NeuralNetworks.h  api-level.h  choreographer.h  hardware_buffer.h  looper.h  native_window.h  ndk-version.h  performance_hint.h  surface_control.h  surface_control_input_receiver.h  system_fonts.h  thermal.h  versioning.h
sysroot/usr/include/bits/: ioctl.h  lockf.h  pthread_types.h  struct_file.h  wctype.h
sysroot/usr/include/bits/android_extra/: complex.h  execinfo.h  fcntl.h  glob.h  grp.h  ifaddrs.h  langinfo.h  nl_types.h  pthread.h  pty.h  search.h  spawn.h  stdio.h  stdio_ext.h  stdlib.h  string.h  sys_mman.h  unistd.h  utmp.h  wchar.h  wctype.h
sysroot/usr/include/bits/fortify/: fcntl.h  poll.h  socket.h  stat.h  stdio.h  stdlib.h  string.h  strings.h  unistd.h
sysroot/usr/include/camera/: NdkCameraCaptureSession.h  NdkCameraMetadataTags.h
sysroot/usr/include/media/: NdkMediaCodecInfo.h  NdkMediaCodecStore.h  NdkMediaDataSource.h
sysroot/usr/include/sys/: cdefs.h  eventfd.h  mman.h  wait.h
sysroot/usr/include/unicode/: char16ptr.h  platform.h  uchar.h  ucol.h  unorm2.h  uscript.h  ustring.h  utypes.h  uvernum.h  uversion.h
tests/: CMakeLists.txt  barrier_test.c  fmemopen_test.c  spinlock_test.c  spinlock_test2.c
tests/src/: barrier_test.c  complex_test.c  conio_test.c  crypt_test.c  execinfo_test.c  hsearch_test.c  iconv_test.c  langinfo_test.c  lockf_test.c  open_memstream_test.c  posix_spawn_test.c  sem_test.c  spinlock_test.c  ucontext_test.c
